templates/5g-env-v2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This template creates a 5G Infra test environment with four separate VPCs: eNB, MEC, CP, and GiLAN.",
    "Metadata": {
        "Version" : "2.0",
        "Comment" : "This template configures VPC network with the following capabilities:",
        "Comment" : "  - Create four VPCs with each containing public and private subnets.",
        "Comment" : "  - Enable testing of inter-VPC ping between the VPC subnets",
        "Comment" : "  - Enable computers to ssh to VMs in the public subnets and private subnets (via ssh agent forwarding)",
        "Comment" : "  - Enable VMs in the private subnets to access Internet",
        "Comment" : "This template is to be enhanced based on the 5G traffic requirements:",
        "Comment" : "  - ACL protection for the subnets",
        "Comment" : "  - Inter-VPC subnet routing",

        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "VPC Configuration"
                    },
                    "Parameters": [
                        "AvailabilityZones"
                    ]
                },
                {
                    "Label": {
                        "default": "EC2 Key Pair Selection"
                    },
                    "Parameters": [
                        "KeyPairName"
                    ]
                },
                {
                    "Label": {
                        "default": "VPC Network Configuration"
                    },
                    "Parameters": [
                        "VPCeNBCIDR",
                        "VPCeNBPubSubnet1CIDR",
                        "VPCeNBPrvSubnetMgmtCIDR",
                        "VPCeNBPrvSubnetS1UCIDR",
                        "VPCeNBTenancy",
                        "VPCMECCIDR",
                        "VPCMECPubSubnet1CIDR",
                        "VPCMECPrvSubnetMgmtCIDR",
                        "VPCMECPrvSubnetZMQCIDR",
                        "VPCMECPrvSubnetS1UCIDR",
                        "VPCMECPrvSubnetSGICIDR",
                        "VPCMECTenancy",
                        "VPCCPCIDR",
                        "VPCCPPubSubnet1CIDR",
                        "VPCCPPrvSubnetMgmtCIDR",
                        "VPCCPPrvSubnetS11MMECIDR",
                        "VPCCPPrvSubnetZMQCIDR",
                        "VPCCPTenancy",
                        "VPCGiLANCIDR",
                        "VPCGiLANPubSubnet1CIDR",
                        "VPCGiLANPrvSubnetMgmtCIDR",
                        "VPCGiLANPrvSubnetSGICIDR",
                        "VPCGiLANTenancy"
                    ]
                }
            ],
            "ParameterLabels": {
                "AvailabilityZones": {
                    "default": "Availability Zones"
                },
                "KeyPairName": {
                    "default": "Key pair name"
                },
                "VPCeNBCIDR": {
                    "default": "VPC-eNB CIDR"
                },
                "VPCeNBPubSubnet1CIDR": {
                    "default": "VPC-eNB Public subnet 1 CIDR"
                },
                "VPCeNBPrvSubnetMgmtCIDR": {
                    "default": "VPC-eNB Private subnet Mgmt CIDR"
                },
                "VPCeNBPrvSubnetS1UCIDR": {
                    "default": "VPC-eNB Private subnet S1U CIDR"
                },
                "VPCeNBTenancy": {
                    "default": "VPC-eNB Tenancy"
                },
                "VPCMECCIDR": {
                    "default": "VPC-MEC CIDR"
                },
                "VPCMECPubSubnet1CIDR": {
                    "default": "VPC-MEC Public subnet 1 CIDR"
                },
                "VPCMECPrvSubnetMgmtCIDR": {
                    "default": "VPC-MEC Private subnet Mgmt CIDR"
                },
                "VPCMECPrvSubnetZMQCIDR": {
                    "default": "VPC-MEC Private subnet ZMQ CIDR"
                },
                "VPCMECPrvSubnetS1UCIDR": {
                    "default": "VPC-MEC Private subnet S1U CIDR"
                },
                "VPCMECPrvSubnetSGICIDR": {
                    "default": "VPC-MEC Private subnet SGI CIDR"
                },
                "VPCMECTenancy": {
                    "default": "VPC-MEC Tenancy"
                },
                "VPCCPCIDR": {
                    "default": "VPC-CP CIDR"
                },
                "VPCCPPubSubnet1CIDR": {
                    "default": "VPC-CP Public subnet 1 CIDR"
                },
                "VPCCPPrvSubnetMgmtCIDR": {
                    "default": "VPC-CP Private subnet Mgmt CIDR"
                },
                "VPCCPPrvSubnetS11MMECIDR": {
                    "default": "VPC-CP Private subnet S11-MME CIDR"
                },
                "VPCCPPrvSubnetZMQCIDR": {
                    "default": "VPC-CP Private subnet ZMQ CIDR"
                },
                "VPCCPTenancy": {
                    "default": "VPC-CP Tenancy"
                },
                "VPCGiLANCIDR": {
                    "default": "VPC-GiLAN CIDR"
                },
                "VPCGiLANPubSubnet1CIDR": {
                    "default": "VPC-GiLAN Public subnet 1 CIDR"
                },
                "VPCGiLANPrvSubnetMgmtCIDR": {
                    "default": "VPC-GiLAN Private subnet Mgmt CIDR"
                },
                "VPCGiLANPrvSubnetSGICIDR": {
                    "default": "VPC-GiLAN Private subnet SGI CIDR"
                },
                "VPCGiLANTenancy": {
                    "default": "VPC-GiLAN Tenancy"
                }
            }
        }
    },
    "Parameters": {
        "AvailabilityZones": {
            "Description": "Select one Availability Zone for VPC-eNB, VPC-MEC, VPC-CP, and VPC-GiLAN.",
            "Type": "List<AWS::EC2::AvailabilityZone::Name>"
        },
        "KeyPairName": {
            "Description": "Public/private key pairs allow you to securely connect to your EC2 instance after it launches.",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "VPCeNBCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.2.0.0/16",
            "Description": "CIDR block for VPC-eNB",
            "Type": "String"
        },
        "VPCeNBPubSubnet1CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.2.0.0/24",
            "Description": "VPC-eNBP public subnet 1 located in Availability Zone 1",
            "Type": "String"
        },
        "VPCeNBPrvSubnetMgmtCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.2.1.0/24",
            "Description": "VPC-eNBP private subnet Mgmt located in Availability Zone 1",
            "Type": "String"
        },
        "VPCeNBPrvSubnetS1UCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.2.2.0/24",
            "Description": "VPC-eNBP private subnet S1U located in Availability Zone 1",
            "Type": "String"
        },
        "VPCeNBTenancy": {
            "AllowedValues": [
                "default"
            ],
            "Default": "default",
            "Description": "The allowed tenancy of instances launched into VPC-eNB",
            "Type": "String"
        },
        "VPCMECCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.0.0/16",
            "Description": "CIDR block for VPC-MEC",
            "Type": "String"
        },
        "VPCMECPubSubnet1CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.0.0/24",
            "Description": "VPC-MECP public subnet 1 located in Availability Zone 1",
            "Type": "String"
        },
        "VPCMECPrvSubnetMgmtCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.1.0/24",
            "Description": "VPC-MECP private subnet Mgmt located in Availability Zone 1",
            "Type": "String"
        },
        "VPCMECPrvSubnetZMQCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.2.0/24",
            "Description": "VPC-MECP private subnet ZMQ located in Availability Zone 1",
            "Type": "String"
        },
        "VPCMECPrvSubnetS1UCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.3.0/24",
            "Description": "VPC-MECP private subnet S1U located in Availability Zone 1",
            "Type": "String"
        },
        "VPCMECPrvSubnetSGICIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.1.4.0/24",
            "Description": "VPC-MECP private subnet SGI located in Availability Zone 1",
            "Type": "String"
        },
        "VPCMECTenancy": {
            "AllowedValues": [
                "default",
                "dedicated"
            ],
            "Default": "default",
            "Description": "The allowed tenancy of instances launched into the VPC-MEC",
            "Type": "String"
        },
        "VPCCPCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.4.0.0/16",
            "Description": "CIDR block for VPC-CP",
            "Type": "String"
        },
        "VPCCPPubSubnet1CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.4.0.0/24",
            "Description": "VPC-CP public subnet 1 located in Availability Zone 1",
            "Type": "String"
        },
        "VPCCPPrvSubnetMgmtCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.4.1.0/24",
            "Description": "VPC-CP private subnet Mgmt located in Availability Zone 1",
            "Type": "String"
        },
        "VPCCPPrvSubnetS11MMECIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.4.2.0/24",
            "Description": "VPC-CP private subnet S11MME located in Availability Zone 1",
            "Type": "String"
        },
        "VPCCPPrvSubnetZMQCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.4.3.0/24",
            "Description": "VPC-CP private subnet ZMQ located in Availability Zone 1",
            "Type": "String"
        },
        "VPCCPTenancy": {
            "AllowedValues": [
                "default",
                "dedicated"
            ],
            "Default": "default",
            "Description": "The allowed tenancy of instances launched into the VPC-CP",
            "Type": "String"
        },
        "VPCGiLANCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.3.0.0/16",
            "Description": "CIDR block for VPC-GiLAN",
            "Type": "String"
        },
        "VPCGiLANPubSubnet1CIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.3.0.0/24",
            "Description": "VPC-GiLAN public subnet 1 located in Availability Zone 1",
            "Type": "String"
        },
        "VPCGiLANPrvSubnetMgmtCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.3.1.0/24",
            "Description": "VPC-GiLAN private subnet Mgmt located in Availability Zone 1",
            "Type": "String"
        },
        "VPCGiLANPrvSubnetSGICIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "18.3.4.0/24",
            "Description": "VPC-GiLAN private subnet SGI located in Availability Zone 1",
            "Type": "String"
        },
        "VPCGiLANTenancy": {
            "AllowedValues": [
                "default",
                "dedicated"
            ],
            "Default": "default",
            "Description": "The allowed tenancy of instances launched into the VPC-GiLAN",
            "Type": "String"
        }
    },

    "Resources": {
        "VPCeNB": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCeNBCIDR"
                },
                "InstanceTenancy": {
                    "Ref": "VPCeNBTenancy"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB"
                    }
                ]
            }
        },
        "VPCeNBInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCeNBGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "InternetGatewayId": {
                    "Ref": "VPCeNBInternetGateway"
                }
            }
        },
        "VPCeNBPubSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "CidrBlock": {
                    "Ref": "VPCeNBPubSubnet1CIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "MapPublicIpOnLaunch": true
            }
        },
        "VPCeNBPubSubnetRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCeNBPubSubnetRoute": {
            "DependsOn": "VPCeNBGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCeNBPubSubnetRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "VPCeNBInternetGateway"
                }
            }
        },
        "VPCeNBPubSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCeNBPubSubnet1"
                },
                "RouteTableId": {
                    "Ref": "VPCeNBPubSubnetRouteTable"
                }
            }
        },

        "VPCeNBPrvSubnetMgmt": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "CidrBlock": {
                    "Ref": "VPCeNBPrvSubnetMgmtCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCeNBPrvSubnetMgmtRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCeNBPrvSubnetMgmtRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCeNBPrvSubnetMgmtRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCeNBNATGateway1"
                }
            }
        },
        "VPCeNBPrvSubnetMgmtRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCeNBPrvSubnetMgmt"
                },
                "RouteTableId": {
                    "Ref": "VPCeNBPrvSubnetMgmtRouteTable"
                }
            }
        },

        "VPCeNBPrvSubnetS1U": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "CidrBlock": {
                    "Ref": "VPCeNBPrvSubnetS1UCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Private subnet S1U"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCeNBPrvSubnetS1URouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCeNB"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-eNB Private subnet S1U"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCeNBPrvSubnetS1URoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCeNBPrvSubnetS1URouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCeNBNATGateway1"
                }
            }
        },
        "VPCeNBPrvSubnetS1URouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCeNBPrvSubnetS1U"
                },
                "RouteTableId": {
                    "Ref": "VPCeNBPrvSubnetS1URouteTable"
                }
            }
        },

        "VPCeNBNAT1EIP": {
            "DependsOn": "VPCeNBGatewayAttachment",
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "VPCeNBNATGateway1": {
            "DependsOn": "VPCeNBGatewayAttachment",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "VPCeNBNAT1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "VPCeNBPubSubnet1"
                }
            }
        },

        "VPCMEC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCMECCIDR"
                },
                "InstanceTenancy": {
                    "Ref": "VPCMECTenancy"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC"
                    }
                ]
            }
        },
        "VPCMECInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCMECGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "InternetGatewayId": {
                    "Ref": "VPCMECInternetGateway"
                }
            }
        },
        "VPCMECPubSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "CidrBlock": {
                    "Ref": "VPCMECPubSubnet1CIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "MapPublicIpOnLaunch": true
            }
        },
        "VPCMECPubSubnetRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCMECPubSubnetRoute": {
            "DependsOn": "VPCMECGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCMECPubSubnetRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "VPCMECInternetGateway"
                }
            }
        },
        "VPCMECPubSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCMECPubSubnet1"
                },
                "RouteTableId": {
                    "Ref": "VPCMECPubSubnetRouteTable"
                }
            }
        },

        "VPCMECPrvSubnetMgmt": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "CidrBlock": {
                    "Ref": "VPCMECPrvSubnetMgmtCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetMgmtRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetMgmtRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetMgmtRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCMECNATGateway1"
                }
            }
        },
        "VPCMECPrvSubnetMgmtRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCMECPrvSubnetMgmt"
                },
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetMgmtRouteTable"
                }
            }
        },

        "VPCMECPrvSubnetZMQ": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "CidrBlock": {
                    "Ref": "VPCMECPrvSubnetZMQCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet ZMQ"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetZMQRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet ZMQ"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetZMQRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetZMQRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCMECNATGateway1"
                }
            }
        },
        "VPCMECPrvSubnetZMQRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCMECPrvSubnetZMQ"
                },
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetZMQRouteTable"
                }
            }
        },
        "VPCMECPrvSubnetS1U": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "CidrBlock": {
                    "Ref": "VPCMECPrvSubnetS1UCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet S1U"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetS1URouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet S1U"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetS1URoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetS1URouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCMECNATGateway1"
                }
            }
        },
        "VPCMECPrvSubnetS1URouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCMECPrvSubnetS1U"
                },
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetS1URouteTable"
                }
            }
        },
        "VPCMECPrvSubnetSGI": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "CidrBlock": {
                    "Ref": "VPCMECPrvSubnetSGICIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet SGI"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetSGIRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCMEC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-MEC Private subnet SGI"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCMECPrvSubnetSGIRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetSGIRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCMECNATGateway1"
                }
            }
        },
        "VPCMECPrvSubnetSGIRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCMECPrvSubnetSGI"
                },
                "RouteTableId": {
                    "Ref": "VPCMECPrvSubnetSGIRouteTable"
                }
            }
        },

        "VPCMECNAT1EIP": {
            "DependsOn": "VPCMECGatewayAttachment",
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "VPCMECNATGateway1": {
            "DependsOn": "VPCMECGatewayAttachment",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "VPCMECNAT1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "VPCMECPubSubnet1"
                }
            }
        },
        "VPCCP": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCCPCIDR"
                },
                "InstanceTenancy": {
                    "Ref": "VPCCPTenancy"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP"
                    }
                ]
            }
        },
        "VPCCPInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCCPGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "InternetGatewayId": {
                    "Ref": "VPCCPInternetGateway"
                }
            }
        },
        "VPCCPPubSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "CidrBlock": {
                    "Ref": "VPCCPPubSubnet1CIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "MapPublicIpOnLaunch": true
            }
        },
        "VPCCPPubSubnet1RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCCPPubSubnet1Route": {
            "DependsOn": "VPCCPGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCCPPubSubnet1RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "VPCCPInternetGateway"
                }
            }
        },
        "VPCCPPubSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCCPPubSubnet1"
                },
                "RouteTableId": {
                    "Ref": "VPCCPPubSubnet1RouteTable"
                }
            }
        },

        "VPCCPPrvSubnetMgmt": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "CidrBlock": {
                    "Ref": "VPCCPPrvSubnetMgmtCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetMgmtRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetMgmtRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetMgmtRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCCPNATGateway1"
                }
            }
        },
        "VPCCPPrvSubnetMgmtRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCCPPrvSubnetMgmt"
                },
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetMgmtRouteTable"
                }
            }
        },

        "VPCCPPrvSubnetS11MME": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "CidrBlock": {
                    "Ref": "VPCCPPrvSubnetS11MMECIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet S11MME"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetS11MMERouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet S11MME"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetS11MMERoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetS11MMERouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCCPNATGateway1"
                }
            }
        },
        "VPCCPPrvSubnetS11MMERouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCCPPrvSubnetS11MME"
                },
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetS11MMERouteTable"
                }
            }
        },

        "VPCCPPrvSubnetZMQ": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "CidrBlock": {
                    "Ref": "VPCCPPrvSubnetZMQCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet ZMQ"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetZMQRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCCP"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-CP Private subnet ZMQ"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCCPPrvSubnetZMQRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetZMQRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCCPNATGateway1"
                }
            }
        },
        "VPCCPPrvSubnetZMQRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCCPPrvSubnetZMQ"
                },
                "RouteTableId": {
                    "Ref": "VPCCPPrvSubnetZMQRouteTable"
                }
            }
        },

        "VPCCPNAT1EIP": {
            "DependsOn": "VPCCPGatewayAttachment",
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "VPCCPNATGateway1": {
            "DependsOn": "VPCCPGatewayAttachment",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "VPCCPNAT1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "VPCCPPubSubnet1"
                }
            }
        },

        "VPCGiLAN": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCGiLANCIDR"
                },
                "InstanceTenancy": {
                    "Ref": "VPCGiLANTenancy"
                },
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN"
                    }
                ]
            }
        },
        "VPCGiLANInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCGiLANGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "InternetGatewayId": {
                    "Ref": "VPCGiLANInternetGateway"
                }
            }
        },
        "VPCGiLANPubSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "CidrBlock": {
                    "Ref": "VPCGiLANPubSubnet1CIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "MapPublicIpOnLaunch": true
            }
        },
        "VPCGiLANPubSubnetRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Public subnet 1"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "VPCGiLANPubSubnetRoute": {
            "DependsOn": "VPCGiLANGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCGiLANPubSubnetRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "VPCGiLANInternetGateway"
                }
            }
        },
        "VPCGiLANPubSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCGiLANPubSubnet1"
                },
                "RouteTableId": {
                    "Ref": "VPCGiLANPubSubnetRouteTable"
                }
            }
        },

        "VPCGiLANPrvSubnetMgmt": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "CidrBlock": {
                    "Ref": "VPCGiLANPrvSubnetMgmtCIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCGiLANPrvSubnetMgmtRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Private subnet Mgmt"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCGiLANPrvSubnetMgmtRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCGiLANPrvSubnetMgmtRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCGiLANNATGateway1"
                }
            }
        },
        "VPCGiLANPrvSubnetMgmtRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCGiLANPrvSubnetMgmt"
                },
                "RouteTableId": {
                    "Ref": "VPCGiLANPrvSubnetMgmtRouteTable"
                }
            }
        },


        "VPCGiLANPrvSubnetSGI": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "CidrBlock": {
                    "Ref": "VPCGiLANPrvSubnetSGICIDR"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Ref": "AvailabilityZones"
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Private subnet SGI"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCGiLANPrvSubnetSGIRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPCGiLAN"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "VPC-GiLAN Private subnet SGI"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "VPCGiLANPrvSubnetSGIRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "VPCGiLANPrvSubnetSGIRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "VPCGiLANNATGateway1"
                }
            }
        },
        "VPCGiLANPrvSubnetSGIRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "VPCGiLANPrvSubnetSGI"
                },
                "RouteTableId": {
                    "Ref": "VPCGiLANPrvSubnetSGIRouteTable"
                }
            }
        },
        "VPCGiLANNAT1EIP": {
            "DependsOn": "VPCGiLANGatewayAttachment",
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "VPCGiLANNATGateway1": {
            "DependsOn": "VPCGiLANGatewayAttachment",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "VPCGiLANNAT1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "VPCGiLANPubSubnet1"
                }
            }
        }
    },

    "Outputs": {
        "VPCeNBID": {
            "Value": {
                "Ref": "VPCeNB"
            },
            "Description": "VPC-eNB ID",
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPCeNBID"
                }
            }
        },
        "VPCMECID": {
            "Value": {
                "Ref": "VPCeNB"
            },
            "Description": "VPC-MEC ID",
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPCMECID"
                }
            }
        },
        "VPCCPID": {
            "Value": {
                "Ref": "VPCCP"
            },
            "Description": "VPC-CP ID",
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPCCPID"
                }
            }
        },
        "VPCGiLANID": {
            "Value": {
                "Ref": "VPCeNB"
            },
            "Description": "VPC-GiLAN ID",
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPCGiLANID"
                }
            }
        }
    }
}
